--- a/app/src/index.pug
+++ b/app/src/index.pug
@@ -4,9 +4,14 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible" content="IE=edge")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
+        meta(name="description" content="description")
         title Document
+        link(rel="preload")
         link(rel="stylesheet" href="styles/index.css")
     body 
         include components/header.pug 
         +header
+        include components/intro.pug 
+        +intro
+        
         script(src="scripts/index.js") 
