--- a/app/src/scss/layout/_ui.scss
+++ b/app/src/scss/layout/_ui.scss
@@ -4,22 +4,19 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
     -webkit-tap-highlight-color: transparent;
-
+    font-family: 'BebasNeueBold';
     &:focus,
     &:active {
         outline: none;
     }
 }
-
 button {
     font-family: inherit;
     cursor: pointer;
 }
-
 input {
     font-family: inherit;
 }
-
 a {
     text-decoration: none;
 }
