--- a/app/src/components/intro.pug
+++ b/app/src/components/intro.pug
@@ -3,6 +3,15 @@ mixin intro()
         .intro__body.container 
             .intro__content
                 h2.intro__subtitle ИНТЕРЬЕРНЫЙ КОНСТРУКТОР ДЛЯ ДЕТЕЙ И ВЗРОСЛЫХ!
+                .intro__ribbon
+                    span 5750 р
+                    | 2990 р
+                p.intro__discount СКИДКА 48%
+                .intro__ribbon.intro__ribbon_pink БЕСПЛАТНАЯ ДОСТАВКА
+                a(href="https://www.wildberries.ru/brands/dixti" onclick="dataLayer.push({'event': 'button1-click'}); return true;" target="_blank" rel="noopener").intro__btn
+                    img(src="images/intro-btn.webp", alt="")
+                    | ЗАКАЗАТЬ СЕЙЧАС!
+                    span T
             .intro__img
                 h2.intro__title НЕ ЗНАЕШЬ ЧЕМ ЗАНЯТЬ <br>СЕБЯ ИЛИ РЕБЕНКА?
                 img(src="images/intro.webp", alt="")
