--- a/app/src/components/intro.pug
+++ b/app/src/components/intro.pug
@@ -15,3 +15,68 @@ mixin intro()
             .intro__img
                 h2.intro__title НЕ ЗНАЕШЬ ЧЕМ ЗАНЯТЬ <br>СЕБЯ ИЛИ РЕБЕНКА?
                 img(src="images/intro.webp", alt="")
+    .intro__slider.swipper
+        .swiper-wrapper
+            .swiper-slide
+                svg#Capa_1.swiper-lazy(style='width: 40px; height: 40px; margin-right: 17px; position: relative; bottom: -10px;' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewbox='0 0 512 512' xml:space='preserve')
+                    path(style='fill:#FF8C78;' d='M395.738,167.413c-2.733-4.112-8.728-4.749-12.26-1.289l-36.666,35.887L263.369,4.783 c-2.622-6.195-11.637-6.43-14.572-0.367L132.114,245.56l-42.551-18.414c-3.926-1.7-8.496-0.009-10.371,3.837 c-15.414,31.627-23.231,58.872-23.231,80.978C55.961,422.263,145.699,512,256,512s200.039-89.738,200.039-200.039 C456.039,276.251,435.751,227.619,395.738,167.413z')
+                    path(style='fill:#DB6B5E;' d='M280.005,503.999c-110.302,0-200.039-89.738-200.039-200.039c0-20.13,6.503-44.533,19.302-72.613 l-9.704-4.199c-3.926-1.7-8.496-0.009-10.371,3.837c-15.415,31.626-23.232,58.87-23.232,80.977C55.961,422.263,145.699,512,256,512 c26.496,0,51.8-5.191,74.964-14.588C314.688,501.702,297.61,503.999,280.005,503.999z')
+                    path(style='fill:#FFC44F;' d='M262.583,139.38c-3.128-4.527-10.04-4.527-13.168,0c-4.632,6.705-113.439,164.96-113.439,228.592 c0,66.181,53.843,120.023,120.023,120.023s120.023-53.843,120.023-120.023C376.024,304.341,267.215,146.086,262.583,139.38z')
+                    path(style='fill:#F79F4D;' d='M272.003,479.994c-66.181,0-120.023-53.842-120.023-120.023c0-57.239,88.03-191.023,109.091-222.209 c-3.473-2.811-8.963-2.276-11.654,1.619c-4.633,6.705-113.44,164.96-113.44,228.592c0,66.181,53.843,120.023,120.023,120.023 c22.405,0,43.392-6.177,61.358-16.908C303.357,476.822,288.044,479.994,272.003,479.994z')
+                    path(style='fill:#8E959F;' d='M256,287.957c-48.532,0-88.017,39.485-88.017,88.017s39.485,88.017,88.017,88.017 s88.017-39.485,88.017-88.017S304.533,287.957,256,287.957z')
+                    path(style='fill:#ECEDEF;' d='M256,303.96c-39.709,0-72.014,32.305-72.014,72.014s32.305,72.014,72.014,72.014 s72.014-32.305,72.014-72.014S295.709,303.96,256,303.96z')
+                    g
+                        path(style='fill:#8E959F;' d='M256,287.957c-2.698,0-5.365,0.129-8.002,0.367v31.639c0,4.419,3.583,8.002,8.002,8.002 c4.419,0,8.002-3.583,8.002-8.002v-31.639C261.365,288.085,258.698,287.957,256,287.957z')
+                        path(style='fill:#8E959F;' d='M167.983,375.974c0,2.698,0.129,5.365,0.367,8.002h31.639c4.419,0,8.002-3.583,8.002-8.002 c0-4.419-3.583-8.002-8.002-8.002H168.35C168.112,370.608,167.983,373.275,167.983,375.974z')
+                        path(style='fill:#8E959F;' d='M256,463.991c2.698,0,5.365-0.129,8.002-0.367v-31.639c0-4.419-3.583-8.002-8.002-8.002 c-4.419,0-8.002,3.583-8.002,8.002v31.639C250.635,463.862,253.303,463.991,256,463.991z')
+                        path(style='fill:#8E959F;' d='M344.017,375.974c0-2.698-0.129-5.365-0.367-8.002h-31.639c-4.419,0-8.002,3.583-8.002,8.002 c0,4.419,3.583,8.002,8.002,8.002h31.639C343.888,381.339,344.017,378.671,344.017,375.974z')
+                    path(style='fill:#DB6B5E;' d='M255.994,391.977c-1.528,0-3.072-0.437-4.433-1.344l-24.005-16.003 c-3.677-2.451-4.671-7.418-2.219-11.096c2.451-3.678,7.419-4.671,11.096-2.219l17.706,11.804l19.464-25.95 c2.651-3.536,7.667-4.253,11.202-1.6c3.536,2.652,4.252,7.667,1.6,11.202l-24.005,32.006 C260.835,390.865,258.433,391.977,255.994,391.977z')
+                    g  
+                    g  
+                    g  
+                    g  
+                    g  
+                    g  
+                    g  
+                    g  
+                    g  
+                    g  
+                    g  
+                    g  
+                    g  
+                    g  
+                    g  
+                | В наличии всего 7 штук!
+                .swiper-lazy-preloader
+            .swiper-slide
+                svg#Capa_1.swiper-lazy(style='width: 40px; height: 40px; margin-right: 17px; position: relative; bottom: -10px;' enable-background='new 0 0 512 512' height='512' viewbox='0 0 512 512' width='512' xmlns='http://www.w3.org/2000/svg')
+                    g
+                        path(d='m250.618 194.941h-153.36v-189.016c0-3.162 2.564-5.726 5.726-5.726h141.907c3.162 0 5.726 2.564 5.726 5.726v189.016z' fill='#eab14d')
+                        path(d='m232.884.198v194.742h17.733v-189.015c0-3.162-2.564-5.726-5.726-5.726h-12.007z' fill='#e49542')
+                        path(d='m183.635 44.319h-19.393c-2.547 0-4.611-2.064-4.611-4.611v-39.51h28.615v39.51c0 2.547-2.065 4.611-4.611 4.611z' fill='#df6b57')
+                        path(d='m426.69 363.673h-235.019v-231.908c0-4.936 4.001-8.937 8.937-8.937h220.356c3.162 0 5.726 2.564 5.726 5.726z' fill='#f1cb86')
+                        path(d='m408.957 122.828v240.845h17.733v-235.119c0-3.162-2.564-5.726-5.726-5.726z' fill='#ecbe6b')
+                        path(d='m318.877 166.949h-19.393c-2.547 0-4.611-2.064-4.611-4.611v-39.51h28.615v39.51c0 2.547-2.064 4.611-4.611 4.611z' fill='#365e7d')
+                        path(d='m276.981 511.802h-269.659c-4.044 0-7.322-3.278-7.322-7.322v-176.288c0-3.163 2.564-5.726 5.726-5.726h265.167c3.362 0 6.088 2.726 6.088 6.088z' fill='#eab14d')
+                        path(d='m259.248 322.466v189.336h17.733v-183.248c0-3.362-2.726-6.088-6.088-6.088z' fill='#e49542')
+                        path(d='m148.187 366.587h-19.393c-2.547 0-4.611-2.064-4.611-4.611v-39.51h28.615v39.51c0 2.547-2.064 4.611-4.611 4.611z' fill='#365e7d')
+                        path(d='m504.678 511.802h-227.697v-148.129h229.293c3.162 0 5.726 2.564 5.726 5.726v135.08c0 4.044-3.278 7.323-7.322 7.323z' fill='#eab14d')
+                        path(d='m494.267 363.673v148.129h10.411c4.044 0 7.322-3.278 7.322-7.322v-135.08c0-3.163-2.564-5.726-5.726-5.726h-12.007z' fill='#e49542')
+                        path(d='m404.187 407.794h-19.393c-2.547 0-4.611-2.064-4.611-4.611v-39.51h28.615v39.51c0 2.547-2.064 4.611-4.611 4.611z' fill='#df6b57')
+                        path(d='m191.671 322.466h-153.359v-121.799c0-3.162 2.564-5.726 5.726-5.726h147.633z' fill='#f1cb86')
+                        path(d='m173.938 194.941h17.733v127.525h-17.733z' fill='#ecbe6b')
+                        path(d='m124.688 239.062h-19.393c-2.547 0-4.611-2.064-4.611-4.611v-39.51h28.615v39.51c0 2.547-2.064 4.611-4.611 4.611z' fill='#df6b57')
+                | 336 Штук продано за последние 24 часа!
+                .swiper-lazy-preloader
+            .swiper-slide
+                svg#Capa_1.swiper-lazy(style='width: 40px; height: 40px; margin-right: 17px; position: relative; bottom: -10px;' enable-background='new 0 0 512.016 512.016' height='512' viewbox='0 0 512.016 512.016' width='512' xmlns='http://www.w3.org/2000/svg')
+                    g
+                        path(d='m475.278 99.896-40.73-32.13 3.38-51.77c.41-6.2-2.84-11.28-7.48-13.95-4.63-2.68-10.66-2.94-15.82.5l-43.14 28.8-48.2-19.2c-11.53-4.6-23.35 6.05-19.99 18l14.07 49.93-33.16 39.9c-7.94 9.55-1.46 24.09 10.94 24.58l51.84 2.05 27.69 43.87c6.65 10.52 22.47 8.79 26.76-2.81l17.97-48.67 50.28-12.79c12.03-3.06 15.34-18.63 5.59-26.31z' fill='#fed843')
+                        path(d='m146.008 422.016h-131c-8.284 0-15 6.716-15 15v60c0 8.284 6.716 15 15 15h131c8.284 0 15-6.716 15-15v-60c0-8.284-6.716-15-15-15z' fill='#fed843')
+                        path(d='m271.008 362.016h-125c-8.284 0-15 6.716-15 15v135h140c8.284 0 15-6.716 15-15v-120c0-8.284-6.716-15-15-15z' fill='#ffb64c')
+                        path(d='m386.008 302.016h-115c-8.284 0-15 6.716-15 15v195h130c8.284 0 15-6.716 15-15v-180c0-8.284-6.716-15-15-15z' fill='#fed843')
+                        path(d='m497.008 512.016h-126v-255c0-8.284 6.716-15 15-15h111c8.284 0 15 6.716 15 15v240c0 8.284-6.716 15-15 15z' fill='#ffb64c')
+                        path(d='m76.008 332.016c-8.284 0-15-6.716-15-15 0-24.813 20.187-45 45-45h60c8.271 0 15-6.729 15-15 0-24.813 20.187-45 45-45h60c8.271 0 15-6.729 15-15 0-8.284 6.716-15 15-15s15 6.716 15 15c0 24.813-20.187 45-45 45h-60c-8.271 0-15 6.729-15 15 0 24.813-20.187 45-45 45h-60c-8.271 0-15 6.729-15 15 0 8.284-6.716 15-15 15z' fill='#efe2dd')
+                        path(d='m469.688 126.206-50.28 12.79-17.97 48.67c-4.29 11.6-20.11 13.33-26.76 2.81l-27.69-43.87 83.46-144.56c4.64 2.67 7.89 7.75 7.48 13.95l-3.38 51.77 40.73 32.13c9.75 7.68 6.44 23.25-5.59 26.31z' fill='#ffb64c')
+                | 451 Человек смотрят этот товар прямо сейчас!
+                .swiper-lazy-preloader
