--- a/app/src/index.pug
+++ b/app/src/index.pug
@@ -6,11 +6,15 @@ html(lang="en")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         meta(name="description" content="description")
         title Document
+        link(rel="stylesheet" href="styles/slider.css")
         link(rel="stylesheet" href="styles/index.css")
     body 
         include components/header.pug 
         +header
         include components/intro.pug 
         +intro
+        include components/enter.pug 
+        +enter
         
+        script(src="scripts/slider.js") 
         script(src="scripts/index.js") 
