--- a/app/src/scss/layout/_intro.scss
+++ b/app/src/scss/layout/_intro.scss
@@ -21,6 +21,7 @@
             padding-right: 0;
             text-align: center;
             align-items: center;
+            padding-bottom: 40px;
         }
     }
     &__subtitle{
@@ -88,7 +89,7 @@
             margin-right: 8px;
         }
         &_pink{
-            background: #fca0b3;
+            background: #fd5c7c;
             color: #ffffff;
             font-size: 32px;
             margin-bottom: 20px;
@@ -109,6 +110,35 @@
         margin-bottom: 10px;
         @include media(992){
             font-size: 26px;
+        }
+    }
+    &__btn{
+        background: #9A0081;
+        padding: 0.2em 0.85em 0.1em;
+        color: #ffffff;
+        text-decoration: none;
+        line-height: 1.5;
+        border-radius: 50px;
+        font-family: 'BebasNeueBold', sans-serif;
+        box-shadow: 0 1px 0 #860170 inset, 1px 1px 0 #860170, 2px 2px 0 #860170, 3px 3px 0 #860170, 4px 4px 0 #860170, 4px 4px 8px rgba(0, 0, 0, 55%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 26px;
+        z-index: 2;
+        margin-top: 10px;
+        img{
+            max-width: 39px;
+            margin-right: 8px;
+        }
+        span{
+            font-size: 20px;
+            display: inline-block;
+            font-family: sans-serif;
+            margin: 0 0 0 8px;
+            padding: 5px 0 0 0;
+            border: 0;  
+            vertical-align: baseline;
         }
     }
     &__title{
@@ -135,6 +165,34 @@
         }
         img{
             width: 100%;
+        }
+    }
+    &__slider{
+        max-width: 100%;
+        overflow: hidden;
+        background-color: #EEF0F4;
+        color: #1f1f1f;
+        font-size: 20px;
+        text-align: center;
+        @include media(992){
+            font-size: 18px;
+        }
+        @include media($sm){
+            font-size: 14px;
+        }
+        .swiper-slide{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 60px;
+            font-family: Arial;
+            font-weight: 500;
+            svg{
+                position: static !important;
+                @include media($sm){
+                    width: 22px !important;        
+                }
+            }
         }
     }
 }
