--- a/app/src/scss/layout/_ui.scss
+++ b/app/src/scss/layout/_ui.scss
@@ -10,6 +10,9 @@
         outline: none;
     }
 }
+body{
+    color: #1f1f1f;
+}
 button {
     font-family: inherit;
     cursor: pointer;
@@ -19,4 +22,7 @@ input {
 }
 a {
     text-decoration: none;
+}
+.section{
+    padding: 75px 0;
 }
