--- a/app/src/scss/layout/_intro.scss
+++ b/app/src/scss/layout/_intro.scss
@@ -173,7 +173,7 @@
         background-color: #EEF0F4;
         color: #1f1f1f;
         font-size: 20px;
-        text-align: center;
+        text-align: left;
         @include media(992){
             font-size: 18px;
         }
@@ -187,6 +187,7 @@
             height: 60px;
             font-family: Arial;
             font-weight: 500;
+            padding: 0 30px;
             svg{
                 position: static !important;
                 @include media($sm){
