--- a/app/src/index.pug
+++ b/app/src/index.pug
@@ -15,6 +15,8 @@ html(lang="en")
         +intro
         include components/enter.pug 
         +enter
+        include components/products.pug 
+        +products
         
         script(src="scripts/slider.js") 
         script(src="scripts/index.js") 
