--- a/app/src/index.pug
+++ b/app/src/index.pug
@@ -17,6 +17,7 @@ html(lang="en")
         +enter
         include components/products.pug 
         +products
-        
+        include components/advantages.pug 
+        +advantages
         script(src="scripts/slider.js") 
         script(src="scripts/index.js") 
