--- a/app/src/scss/layout/_ui.scss
+++ b/app/src/scss/layout/_ui.scss
@@ -23,6 +23,9 @@ input {
 a {
     text-decoration: none;
 }
+ul{
+    list-style-type: none;
+}
 .section{
     padding: 75px 0;
     @include media(576){
