--- a/app/src/index.pug
+++ b/app/src/index.pug
@@ -19,5 +19,7 @@ html(lang="en")
         +products
         include components/advantages.pug 
         +advantages
+        include components/reviews.pug 
+        +reviews
         script(src="scripts/slider.js") 
         script(src="scripts/index.js") 
