--- a/app/src/scss/layout/_advantages.scss
+++ b/app/src/scss/layout/_advantages.scss
@@ -97,6 +97,7 @@
         display: flex;
         align-items: stretch;
         justify-content: space-evenly;
+        background: #f9f9f9;
         @include media(992){
             flex-direction: column;
             align-items: center;
