--- a/app/src/scss/layout/_products.scss
+++ b/app/src/scss/layout/_products.scss
@@ -54,6 +54,12 @@
             justify-content: space-between;
             align-items: center;
         }
+        &-content{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+        }
         &-title{
             font-size: 16px;
             font-family: Arial;
