--- a/app/src/components/reviews.pug
+++ b/app/src/components/reviews.pug
@@ -77,7 +77,7 @@ mixin reviews()
                                     span(role='presentation' aria-hidden='true')  &middot; 
                                     span.sm-testimonial-slide-body-right-second-timestamp about 3 hours ago
         img(src="images/ico-users.webp", alt="").reviews-img
-    .section.pb-0.gray
+    .section.pb-0.pt-0.gray
         .video_wrap
             img(src='images/comp.webp' alt='')
             .video
