--- a/app/src/index.pug
+++ b/app/src/index.pug
@@ -21,5 +21,9 @@ html(lang="en")
         +advantages
         include components/reviews.pug 
         +reviews
+        include components/faq.pug 
+        +faq
+        include components/footer.pug 
+        +footer
         script(src="scripts/slider.js") 
         script(src="scripts/index.js") 
