--- a/app/src/scss/index.scss
+++ b/app/src/scss/index.scss
@@ -7,3 +7,5 @@
 @import 'layout/products';
 @import 'layout/advantages';
 @import 'layout/reviews';
+@import 'layout/faq';
+@import 'layout/footer';
