--- a/app/src/scss/layout/_ui.scss
+++ b/app/src/scss/layout/_ui.scss
@@ -29,13 +29,19 @@ ul{
 .section{
     padding: 75px 0;
     @include media(576){
-        padding: 20px 0;   
+        padding: 40px 0;   
     }
     &.pb-0{
         padding-bottom: 0;
     }
+    &.pt-0{
+        padding-top: 0;
+    }
     &.gray{
         background: #f9f9f9;
+    }
+    &.grey{
+        background: rgba(39, 48, 67, 0.075);
     }
 }
 .video_wrap {
