--- a/app/src/components/products.pug
+++ b/app/src/components/products.pug
@@ -29,6 +29,8 @@ mixin products()
                         .swiper-slide
                             img(src="images/slide-1-8.webp", alt="").swiper-lazy
                             .swiper-lazy-preloader
+                    .swiper-button-next.products__item-slider-next
+                    .swiper-button-prev.products__item-slider-prev
                 .products__item-row
                     .products__item-content
                         p.products__item-title "Солнечный Майами"
@@ -61,6 +63,8 @@ mixin products()
                         .swiper-slide
                             img(src="images/slide-2-8.webp", alt="").swiper-lazy
                             .swiper-lazy-preloader
+                    .swiper-button-next.products__item-slider-next
+                    .swiper-button-prev.products__item-slider-prev
                 .products__item-row
                     .products__item-content
                         p.products__item-title "Солнечный Майами"
@@ -93,6 +97,8 @@ mixin products()
                         .swiper-slide
                             img(src="images/slide-3-8.webp", alt="").swiper-lazy
                             .swiper-lazy-preloader
+                    .swiper-button-next.products__item-slider-next
+                    .swiper-button-prev.products__item-slider-prev
                 .products__item-row
                     .products__item-content
                         p.products__item-title "Солнечный Майами"
@@ -125,6 +131,8 @@ mixin products()
                         .swiper-slide
                             img(src="images/slide-4-8.webp", alt="").swiper-lazy
                             .swiper-lazy-preloader
+                    .swiper-button-next.products__item-slider-next
+                    .swiper-button-prev.products__item-slider-prev
                 .products__item-row
                     .products__item-content
                         p.products__item-title "Солнечный Майами"
@@ -157,6 +165,8 @@ mixin products()
                         .swiper-slide
                             img(src="images/slide-5-8.webp", alt="").swiper-lazy
                             .swiper-lazy-preloader
+                    .swiper-button-next.products__item-slider-next
+                    .swiper-button-prev.products__item-slider-prev
                 .products__item-row
                     .products__item-content
                         p.products__item-title "Солнечный Майами"
@@ -189,6 +199,8 @@ mixin products()
                         .swiper-slide
                             img(src="images/slide-1-8.webp", alt="").swiper-lazy
                             .swiper-lazy-preloader
+                    .swiper-button-next.products__item-slider-next
+                    .swiper-button-prev.products__item-slider-prev
                 .products__item-row
                     .products__item-content
                         p.products__item-title "Солнечный Майами"
@@ -221,6 +233,8 @@ mixin products()
                         .swiper-slide
                             img(src="images/slide-2-8.webp", alt="").swiper-lazy
                             .swiper-lazy-preloader
+                    .swiper-button-next.products__item-slider-next
+                    .swiper-button-prev.products__item-slider-prev
                 .products__item-row
                     .products__item-content
                         p.products__item-title "Солнечный Майами"
@@ -253,6 +267,8 @@ mixin products()
                         .swiper-slide
                             img(src="images/slide-3-8.webp", alt="").swiper-lazy
                             .swiper-lazy-preloader
+                    .swiper-button-next.products__item-slider-next
+                    .swiper-button-prev.products__item-slider-prev
                 .products__item-row
                     .products__item-content
                         p.products__item-title "Солнечный Майами"
@@ -285,6 +301,8 @@ mixin products()
                         .swiper-slide
                             img(src="images/slide-4-8.webp", alt="").swiper-lazy
                             .swiper-lazy-preloader
+                    .swiper-button-next.products__item-slider-next
+                    .swiper-button-prev.products__item-slider-prev
                 .products__item-row
                     .products__item-content
                         p.products__item-title "Солнечный Майами"
@@ -317,6 +335,8 @@ mixin products()
                         .swiper-slide
                             img(src="images/slide-5-8.webp", alt="").swiper-lazy
                             .swiper-lazy-preloader
+                    .swiper-button-next.products__item-slider-next
+                    .swiper-button-prev.products__item-slider-prev
                 .products__item-row
                     .products__item-content
                         p.products__item-title "Солнечный Майами"
