--- a/app/src/components/reviews.pug
+++ b/app/src/components/reviews.pug
@@ -81,4 +81,4 @@ mixin reviews()
         .video_wrap
             img(src='images/comp.webp' alt='')
             .video
-                iframe(title="video" width='640' height='360' src='https://www.youtube.com/embed/Rw38rvP3azM')
+                iframe(title="video" width='640' height='360' src='https://www.youtube.com/embed/Rw38rvP3azM' srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/Rw38rvP3azM?autoplay=1><img src=https://img.youtube.com/vi/Rw38rvP3azM/hqdefault.jpg alt='Video'><span>▶</span></a>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
