--- a/app/src/index.pug
+++ b/app/src/index.pug
@@ -25,5 +25,6 @@ html(lang="en")
         +faq
         include components/footer.pug 
         +footer
+        script(src="widget-trust/XD9852F6BF8085F60015C2C1602E8CA38.js") 
         script(src="scripts/slider.js") 
         script(src="scripts/index.js") 
