--- a/app/src/components/reviews.pug
+++ b/app/src/components/reviews.pug
@@ -20,7 +20,7 @@ mixin reviews()
                                     i.sm-testimonial-slide-sm-icon
                             .sm-testimonial-slide-body
                                 .sm-testimonial-slide-sm-clearfix
-                                img.sm-testimonial-slide-img(src='../images/reviews.webp' alt='')
+                                img.sm-testimonial-slide-img(src='images/reviews.webp' alt='')
                                 .sm-testimonial-slide-body-right
                                     .sm-testimonial-slide-body-right-first
                                         span Никита Долгих
@@ -43,7 +43,7 @@ mixin reviews()
                                     i.sm-testimonial-slide-sm-icon
                             .sm-testimonial-slide-body
                                 .sm-testimonial-slide-sm-clearfix
-                                img.sm-testimonial-slide-img(src='../images/reviews.webp' alt='')
+                                img.sm-testimonial-slide-img(src='images/reviews.webp' alt='')
                                 .sm-testimonial-slide-body-right
                                     .sm-testimonial-slide-body-right-first
                                         span Никита Долгих
@@ -66,7 +66,7 @@ mixin reviews()
                                     i.sm-testimonial-slide-sm-icon
                             .sm-testimonial-slide-body
                                 .sm-testimonial-slide-sm-clearfix
-                                img.sm-testimonial-slide-img(src='../images/reviews.webp' alt='')
+                                img.sm-testimonial-slide-img(src='images/reviews.webp' alt='')
                                 .sm-testimonial-slide-body-right
                                     .sm-testimonial-slide-body-right-first
                                         span Никита Долгих
